test/tests/compiler/18_structures/invalid_parse/extra_credit/plx1_type_kw_in_union_specifier.plx
type union s1(x: i32, y: i32)

pub fn main(none) i32 {
    s: type union s1 = $(10, 20)
    return 0
}
